# common_tools

./: .gitignore  README.md  delete_x.py  pyproject.toml
audio_2_text/: README.md  a2t.py  funstar_cli.py  requirements.txt
audio_handler/: README.md  merge_audio.py  pyproject.toml  requirements.txt
pdf_handler/: README.md  config_template.yaml  merge.py  pdfh.py  requirements.txt  template_config.yaml
pdf_handler/.pdf_handler/: pyvenv.cfg
shell_scripts/: Makefile  README.md  ffn_anna.sh  format_fn.sh
video_2_audio/: .gitignore  README.md  cut_audio.py  requirement.txt  v2a.sh  video2audio.py
ytb_dl/: .gitignore  README.md  config.yaml  cut_audio.py  d.sh  dl.py  main.py  pyproject.toml  requirements.txt  template_config.yaml  video2audio.py  video_cut_from_config.py
